# web-task-manager

./: .dockerignore  .env-non-dev.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 94c0e21f421a_create_database.py
app/: config.py  database.py  enums.py  main.py  models.py
app/routes/: auth.py  tasks.py  users.py
app/schemas/: auth.py  tasks.py  users.py
app/services/: auth.py  tasks.py  users.py
tests/: conftest.py  test_auth.py  test_main.py  test_tasks.py
