[tool.poetry]
name = "web-task-manager"
version = "0.1.0"
description = "A simple RESTful API application for managing a task list(ToDo list) based on the FastAPI framework"
authors = ["sstanqq <danielstwich@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-multipart = "^0.0.12"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
